@@ -1,5 +1,5 @@
 /*
-Copyright 2015 Futeh Kao
+Copyright 2015-2019 Futeh Kao
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -36,6 +36,7 @@ import java.lang.reflect.Method;
 import java.text.ParseException;
 import java.util.Date;
 import java.util.TimeZone;
+import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * Created by futeh.
@@ -44,6 +45,7 @@ import java.util.TimeZone;
 public class Job implements Initializable, Startable, LaunchListener {
 
     private static Logger logger = Logger.getLogger();
+    private static ThreadLocal<Job> currentJob = new ThreadLocal<>();
 
     private JobServer jobServer;
     private Scheduler scheduler;
@@ -57,6 +59,12 @@ public class Job implements Initializable, Startable, LaunchListener {
     private Method invocation;
     private Object target;
     private String targetMethod;
+    private AtomicInteger running = new AtomicInteger(0);
+    private boolean started = false;
+
+    public static Job getCurrentJob() {
+        return currentJob.get();
+    }
 
     public JobServer getJobServer() {
         return jobServer;
@@ -103,9 +111,11 @@ public class Job implements Initializable, Startable, LaunchListener {
     }
 
     @JmxAttributeMethod
-    public String getNextFireTime() {
+    public String getDisplayNextFireTime() {
         try {
             Trigger trigger = scheduler.getTrigger(new TriggerKey(name, group));
+            if (trigger.getNextFireTime() == null)
+                return "NA";
             return trigger.getNextFireTime().toString();
         } catch (SchedulerException e) {
             Logger.suppress(e);
@@ -115,22 +125,60 @@ public class Job implements Initializable, Startable, LaunchListener {
         return "NA";
     }
 
+    public Date getNextFireTime() throws SchedulerException {
+        Trigger trigger = scheduler.getTrigger(new TriggerKey(name, group));
+        return trigger.getNextFireTime();
+    }
+
+    public Date getFireTimeAfter(Date date) throws SchedulerException {
+        Trigger trigger = scheduler.getTrigger(new TriggerKey(name, group));
+        return trigger.getFireTimeAfter(date);
+    }
+
+    public long computePrevious() throws SchedulerException {
+        Date nextFire = getNextFireTime();
+        long interval = getFireTimeAfter(nextFire).getTime() - getNextFireTime().getTime();
+        Trigger trigger = scheduler.getTrigger(new TriggerKey(name, group));
+        if (trigger instanceof CronTrigger) {
+            CronTrigger cronTrigger = (CronTrigger) trigger;
+            try {
+                CronExpression cronEx = new CronExpression(cronTrigger.getCronExpression());
+                cronEx.setTimeZone(cronTrigger.getTimeZone());
+                int n = 0;
+                long prev;
+                do {
+                    n++;
+                    prev = cronEx.getTimeAfter(new Date(nextFire.getTime() - n * interval)).getTime();
+                } while (prev > nextFire.getTime() - interval);
+                return prev;
+            } catch (ParseException e) {
+                throw new SystemException(e);
+            }
+
+        }
+
+        return nextFire.getTime() - interval;
+    }
+
     @JmxAttributeMethod
     public boolean isRunning() {
         try {
-            return scheduler.getJobDetail(new JobKey(name, group)) != null;
-        } catch (SchedulerException e) {
-            Logger.suppress(e);
+            JobDetail detail = scheduler.getJobDetail(new JobKey(name, group));
+            if (detail == null)
+                return false;
+            else
+                return running.get() > 0;
         } catch (Exception th) {
             Logger.suppress(th);
         }
         return false;
     }
 
+    @SuppressWarnings("unchecked")
     private void init() {
         try {
             if (target instanceof  Class) {
-                target = ((Class) target).newInstance();
+                target = ((Class) target).getDeclaredConstructor().newInstance();
             }
             invocation = target.getClass().getMethod(targetMethod);
         } catch (Exception e) {
@@ -144,8 +192,10 @@ public class Job implements Initializable, Startable, LaunchListener {
     }
 
     public void start() {
+        if (started)
+            return;
         try {
-            logger.info("Scheduled job=" + getName());
+            logger.info("Scheduled job={}", getName());
             init();
             JobDetail jobDetail = newJobDetail();
             CronTrigger trigger = newCronTrigger();
@@ -159,6 +209,7 @@ public class Job implements Initializable, Startable, LaunchListener {
                 }
             }
             scheduler.scheduleJob(jobDetail, trigger);
+            started = true;
         } catch (Exception ex) {
             throw new SystemException(ex);
         }
@@ -169,6 +220,7 @@ public class Job implements Initializable, Startable, LaunchListener {
         // do nothing
     }
 
+    @SuppressWarnings("unchecked")
     protected JobDetail newJobDetail() {
         Class jobClass = (this.concurrent ? ConcurrentRunner.class : NonConcurrentRunner.class);
         JobDetailImpl jobDetail = new JobDetailImpl();
@@ -187,7 +239,6 @@ public class Job implements Initializable, Startable, LaunchListener {
     }
 
     protected CronTrigger updateTrigger(CronTriggerImpl trigger) throws ParseException {
-
         trigger.setName(name);
         trigger.setGroup(group);
         trigger.setCronExpression(cronExpression);
@@ -200,17 +251,26 @@ public class Job implements Initializable, Startable, LaunchListener {
     @SuppressWarnings("squid:S00112")
     public Object execute() throws Throwable {
         try {
+            running.incrementAndGet();
             // this call is executed using a different thread so that we need to set up
             // logging context.
             if (jobServer != null &&
                     jobServer.resourceManager != null) {
                 jobServer.resourceManager.createLoggerContext();
             }
+            currentJob.set(this);
             return invocation.invoke(target);
         } catch (InvocationTargetException ex) {
             Logger.suppress(ex);
             throw ex.getTargetException();
+        } finally {
+            running.decrementAndGet();
+            currentJob.remove();
         }
+    }
+
+    public void trigger() throws SchedulerException {
+        scheduler.triggerJob(new JobKey(name, group));
     }
 
     public Scheduler getScheduler() {
